refactor: GA4 데이터 수집방식 변경